--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Dairy Free Girl</title>
-		<link rel="stylesheet" type="text/css" href=style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<h1>Dairy Free Girl</h1>
