--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
 
-		<p>Ask me a Question: Send me an email @<a href=malito:"lbreid03@gmail.com">lbreid03@gmail.com</a>.</p>
+		<p>Ask me a Question: Send me an email at <a href=malito:"lbreid03@gmail.com">lbreid03@gmail.com</a>.</p>
 
 		<h3>Example Questions, include:</h3>
 
