Sign off signature

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			<li>What grocery stores have the best selection of dairy free items?</li>
 		</ul>
 		</p>
+
+		<p>Keep milking those Almonds</p>
 	
 	</body>
 </html>
