--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,11 +2,27 @@
 <html>
 	<head>
 		<title>Dairy Free Girl</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<h1>Dairy Free Girl</h1>
+
 		<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
-		<p>Q&A: Send me an email <a href=malito:"breid03@gmail.com">here</a>.</p>
+
+		<p>Ask me a Question: Send me an email at <a href=malito:"lbreid03@gmail.com">lbreid03@gmail.com</a>.</p>
+
+		<h3>Example Questions, include:</h3>
+
+		<p>
+		<ul>
+			<li>What recipe is your favorite?</li>
+			<li>What dairy free substitutions do you use?</li>
+			<li>What's your favorite meal to cook and why?</li>
+			<li>What grocery stores have the best selection of dairy free items?</li>
+		</ul>
+		</p>
+
+		<p>Keep milking those Almonds- Lauren</p>
+	
 	</body>
-	</html>
+</html>
