--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Dairy Free Girl</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<h1>Dairy Free Girl</h1>
@@ -13,14 +13,12 @@
 
 		<h3>Example Questions, include:</h3>
 
-		<p>
 		<ul>
 			<li>What recipe is your favorite?</li>
 			<li>What dairy free substitutions do you use?</li>
 			<li>What's your favorite meal to cook and why?</li>
 			<li>What grocery stores have the best selection of dairy free items?</li>
 		</ul>
-		</p>
 
 		<p>Keep milking those Almonds- Lauren</p>
 	
