--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<title>Dairy Free Girl</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div>
 		<h1>Dairy Free Girl</h1>
+		<p>Dairy Free Living for the Everyday Girl</p>
 		<hr>
 		<a href="#">Click Here</a>
 	</div>
 <br>
 	<div>
-
 		<nav>
 			<a href="#">Home</a>
 			<a href="#">Featured</a>
@@ -20,11 +20,10 @@
 			<a href="#">Reviews</a>
 			<a href="#">Travel</a>
 			<a href="#">Follow</a>
-			</nav>
-		</div>
+		</nav>
+	</div>
 
 		<main>
-
 			<section>
 				<h2>Welcome!</h2>
 				<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
@@ -33,18 +32,22 @@
 			<section>
 				<img src="#">
 				<h3>Featured</h3>
+				<a href="#">Learn More</a>
 			</section>
 			<section>
 				<img src="#">
 				<h3>Recipes</h3>
+				<a href="#">Learn More</a>
 			</section>
 			<section>
 				<img src="#">
 				<h3>Reviews</h3>
+				<a href="#">Learn More</a>
 			</section>
 			<section>
 				<img src="#">
 				<h3>Travel</h3>
+				<a href="#">Learn More</a>
 			</section>
 
 			
@@ -57,6 +60,7 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<a href="#">Read More</a>
 			</section>
 
 			<section>
@@ -68,17 +72,15 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<a href="#">Read More</a>
 			</section>
 
 			<section>
 				<img src="#">
 				<h2>Join My Email Newsletter!</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				tempor incididunt ut labore et dolore magna aliqua.</p>
+				<a href="#">Sign Up!</a>
 				<p>Keep milking those Almonds- Lauren</p>
 
 			</section>
