--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<div>
+		<img src="images/home.jpg"
 		<h1>Dairy Free Girl</h1>
 		<p>Dairy Free Living for the Everyday Girl</p>
 		<hr>
