--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,13 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div>
+	<header>
 		<img src="images/home.jpg"
 		<h1>Dairy Free Girl</h1>
 		<p>Dairy Free Living for the Everyday Girl</p>
 		<hr>
 		<a href="#">Click Here</a>
-	</div>
+	</header>
 <br>
 	<div>
 		<nav>
