--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<img src="images/home.jpg"
+		<img src="images/home.jpg" alt="Welcome to Dairy Free Girl Website" title="Welcome">
 		<h1>Dairy Free Girl</h1>
 		<p>Dairy Free Living for the Everyday Girl</p>
 		<hr>
