--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,7 +7,7 @@
 
 <body>
 	<header>
-		<img src="images/home.jpg" alt="Welcome to Dairy Free Girl Website" title="Welcome">
+		<img src="images/home.JPG" alt="Welcome to Dairy Free Girl Website" title="Welcome">
 		<h1>Dairy Free Girl</h1>
 		<p>Dairy Free Living for the Everyday Girl</p>
 		<hr>
