--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -9,7 +9,7 @@
 	<header>
 		<img src="images/home.JPG" alt="Welcome to Dairy Free Girl Website" title="Welcome">
 		<h1>Dairy Free Girl</h1>
-		<p>Dairy Free Living for the Everyday Girl</p>
+		<p id="slogan">Dairy Free Living for the Everyday Girl</p>
 		<hr>
 		<a href="#">Click Here</a>
 	<br>
