--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,13 +6,15 @@
 </head>
 
 <body>
-	<header>
+	<div>
 		<img src="images/home.JPG" alt="Welcome to Dairy Free Girl Website" title="Welcome">
 		<h1>Dairy Free Girl</h1>
 		<p id="slogan">Dairy Free Living for the Everyday Girl</p>
 		<hr>
 		<a href="#">Click Here</a>
-	<br>
+	</div>
+
+	<header>	
 		<nav>
 			<a href="#">Home</a>
 			<a href="#">Featured</a>
