--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,12 +6,12 @@
 </head>
 
 <body>
-	<div>
+	<div class="container">
 		<img src="images/home.JPG" alt="Welcome to Dairy Free Girl Website" title="Welcome">
 		<h1>Dairy Free Girl</h1>
 		<p id="slogan">Dairy Free Living for the Everyday Girl</p>
 		<hr>
-		<a href="#">Click Here</a>
+  		<button class="btn">Button</button>
 	</div>
 
 	<header>	
