--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,8 +7,8 @@
 
 <body>
 	<div class="container">
-		<h1>Dairy Free Girl</h1>
-		<p id="slogan">Dairy Free Living for the Everyday Girl</p>
+		<h1>Dairy Free Girl in DC</h1>
+		<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
 		<hr>
   		<button class="btn">Button</button>
 	</div>
