--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,11 +6,10 @@
 </head>
 
 <body>
-	<div class="container">
+	<div>
 		<h1>Dairy Free Girl in DC</h1>
 		<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
-		<hr>
-  		<button class="btn">Button</button>
+
 	</div>
 
 	<header>	
