--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,11 +6,12 @@
 </head>
 
 <body>
-	<div>
-		<h1>Dairy Free Girl in DC</h1>
-		<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
-
-	</div>
+	<section class="hero">
+		<div class="hero-inner">
+			<h1 class="hero">Dairy Free Girl in DC</h1>
+			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
+        </div>
+	</section>
 
 	<header>	
 		<nav>
