--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -10,6 +10,7 @@
 		<div class="hero-inner">
 			<h1 class="hero">Dairy Free Girl in DC</h1>
 			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
+			<a href="#" class="btn">Learn More</a>
         </div>
 	</section>
 
