--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -8,6 +8,7 @@
 <body>
 	<section class="hero">
 		<div class="hero-inner">
+			<img src= "images/home.jpg"  alt="Welcome to Dairy Free Girl in DC" " title="Welcome";>
 			<h1 class="hero">Dairy Free Girl in DC</h1>
 			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
 			<a href="#" class="btn">Learn More</a>
