--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,13 +6,11 @@
 </head>
 
 <body>
-	<section class="hero">
-		<div class="hero-inner">
-			<h1 class="hero">Dairy Free Girl in DC</h1>
+		<div>
+			<h1>Dairy Free Girl in DC</h1>
 			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
-			<a href="#" class="btn">Learn More</a>
+			<a href="#">Learn More</a>
         </div>
-	</section>
 
 	<header>	
 		<nav>
@@ -84,8 +82,9 @@
 				tempor incididunt ut labore et dolore magna aliqua.</p>
 				<a href="#">Sign Up!</a>
 				<p>Keep milking those Almonds- Lauren</p>
-
 			</section>
+
 		</main>
+
 	</body>
 </html>
