--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -78,9 +78,8 @@
 			<section>
 				<img src="#">
 				<h2>Join My Email Newsletter!</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua.</p>
-				<a href="#">Sign Up!</a>
+				<p>Keep reviews of products, restaurants and travel tips close. Sign up to hear from me every month.</p>
+				<a href="malito:lbreid03@gmail.com">Sign Up!</a>
 				<p>Keep milking those Almonds- Lauren</p>
 			</section>
 
