--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -35,7 +35,7 @@
 				<a href="#">Learn More</a>
 			</section>
 			<section>
-				<img src="images/recipes.jpg" alt="Go to Recipes" title="Recipes">
+				<img id="recipes" src="images/recipes.jpg" alt="Go to Recipes" title="Recipes">
 				<h3>Recipes</h3>
 				<a href="#">Learn More</a>
 			</section>
