--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -53,26 +53,43 @@
 			
 			<section>
 				<img src="#">
-				<h2>Article Heading 1</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<a href="#">Read More</a>
-			</section>
+				<h2>St. Patricks Day Vegan Pesto Pasta</h2>
+				<p><strong>St. Patricks Day & Sunday = Pasta</strong> St. Patricks Day is a very normal day to see people with green socks and eating Lucky Charms. But, what if you want to put a green spin on your Sunday pasta meal? Well, the perfect place to start is by adding herbs, and for pasta having a go to pesto sauce is the answer to any time you are tired of the plain, boring red sauce. 
 
-			<section>
-				<img src="#">
-				<h2>Article Heading 2</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<a href="#">Read More</a>
+				<p>Normally, pesto contains dairy ingredients, but with this amazing recipe courtesy of Samah of Dadaeats, your Sunday and St. Patricks Day will be one for the books.<p>
+
+				<p>View the Recipe below</p>
+ 
+				<h5> Prep Time</h5>
+				5 minutes
+				 <h5>Total Time</h5>
+				5 minutes
+				<h5>Servings</h5>
+				4 Servings
+				<h5>Author</h5>
+				Samah Dada
+
+				<h4>Ingredients</h4>
+				<ul>
+					<li>1 box pasta of choice</li>
+					<li>3/4 bag of spinach</li>
+					<li>4 cloves of garlic</li>
+					<li>4 TBSP extra-virgin olive oil</li>
+					<li>1/4 cup of water</li>
+					<li>Juice of half a lemon</li>
+					<li>Small handful basil leaves or basil flakes to taste</li>
+					<li>Chili flakes to taste</li>
+					<li>Oregano to taste</li>
+					<li>Salt to taste</li>
+					<li>Pepper to taste</li>
+					
+				<h4>Instructions</h4>
+				<ol>
+					<li>Boil a full box of your pasta of choice and prep the pesto while that's cooking. For the pesto, throw all of your ingredients into a food processor/blender and pulse until mixed. Add seasonings to taste as you wish. I always add more chili flakes because I like it spicy! When the pasta is boiled, drain and add all of the sauce to the pot. Mix thoroughly. I like to blanch grape tomatoes in chili infused olive oil to add some color and sweetness to the dish. Feel free to add your toppings of choice - I'd suggest some almond milk ricotta if you're into that, nutritional yeast is great, or even some pine nuts. This is great served hot or as a cold pasta salad! </li>
+
+					<p>Courtesy of: <a href="https://dadaeats.com/classic-five-minute-spinach-pesto-pasta">
+										Dadda eats</a></p>
+	
 			</section>
 
 			<section>
