--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -98,7 +98,7 @@
 				<img src="#">
 				<h2>Join My Email Newsletter!</h2>
 				<p>Keep reviews of products, restaurants and travel tips close. Sign up to hear from me every month.</p>
-				<a href="malito:"lbreid03@gmail.com"">Sign Up!</a>
+				<a href="malito:lbreid03@gmail.com">Sign Up!</a>
 				<p>Keep milking those Almonds- Lauren</p>
 			</section>
 
