Veggie Bowl recipe

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -50,11 +50,59 @@
 				<a href="#">Learn More</a>
 			</section>
 
-			
+			<section>
+					<h2>Fridays for Lent: Roasted Veggie Bowl</h2>
+					Recipe courtesy of the <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/roasted-veggie-buddha-bowl-5293785">Food Network</a>
+					<h5>Active:</h5> 
+					30 min
+					<h5>Yield: </h5>
+					2 servings
+					<p>Get our one sheet pan, put all of the veggies and chickpeas on the pan and make some quinoa and cut some avocado slices to finish off the dish.</p>
+
+					<ul>
+						<li>You can forgo the spice on the chickpeas if you are sensitive to spices like curry powder. </li>
+
+						<li>Substitutions can be made to use rice instead of quinoa, and guacamole for avocado slices. </li>
+
+						<li>To make this dish dairy free: please forgo the Greek yogurt and tahini. </li>
+					</ul>
+				
+					<h4>Ingredients</h4>
+					<ul>
+						<li>One 14-ounce can chickpeas, drained and rinsed</li>
+						<li>3/4 teaspoon spicy curry powder</li>
+						<li>4 teaspoons olive oil</li>
+						<li>Kosher salt and freshly ground black pepper</li>
+						<li>1 small red onion (about 4 ounces), cut into 1-inch pieces</li>
+						<li>1 small sweet potato (about 7 ounces), peeled and chopped into 1/2-inch pieces</li>
+						<li>4 ounces medium cremini mushrooms, halved</li>
+						<li>1/3 cup fat-free Greek yogurt</li>
+						<li>1 tablespoon tahini </li>
+						<li>1 lemon</li>
+						<li>1 cup cooked quinoa</li>
+						<li>1/2 avocado, thinly sliced </li>
+					</ul>
+
+					<h4>Directions</h4>
+					<ol>
+						<li>Toss the chickpeas with the curry powder, 1 teaspoon of the oil, 1/4 teaspoon salt and a few grinds of black pepper in a medium bowl. Place on one side of a baking sheet. </li>
+
+						<li>Arrange the onions next to the chickpeas, then the sweet potatoes and lastly the mushrooms.</li>
+
+						<li>Toss the onions, sweet potatoes and mushrooms with the remaining 3 teaspoons oil, 1/4 teaspoon salt and a generous amount of black pepper. </li>
+
+						<li>Bake until the chickpeas are a bit crunchy and the sweet potatoes are softened and starting to turn brown in a few spots, 25 to 30 minutes. </li>
+
+						<li>Meanwhile, whisk the yogurt, tahini and juice of half the lemon in a small bowl. Slice the remaining lemon into wedges. </li>
+
+						<li>Divide the quinoa between two bowls. Arrange half the vegetables and avocado slices on top of the quinoa, leaving a space for the yogurt in the middle. Dollop the yogurt in the empty space and serve with the lemon wedges.</li>
+					</ol>
+			</section>
+
 			<section>
 				<img src="#">
 				<h2>St. Patricks Day Vegan Pesto Pasta</h2>
-				<p><strong>St. Patricks Day & Sunday = Pasta</strong> St. Patricks Day is a very normal day to see people with green socks and eating Lucky Charms. But, what if you want to put a green spin on your Sunday pasta meal? Well, the perfect place to start is by adding herbs, and for pasta having a go to pesto sauce is the answer to any time you are tired of the plain, boring red sauce. 
+				<p><strong>St. Patricks Day & Sunday = Pasta</strong> <br>St. Patricks Day is a very normal day to see people with green socks and eating Lucky Charms. But, what if you want to put a green spin on your Sunday pasta meal? Well, the perfect place to start is by adding herbs, and for pasta having a go to pesto sauce is the answer to any time you are tired of the plain, boring red sauce. 
 
 				<p>Normally, pesto contains dairy ingredients, but with this amazing recipe courtesy of Samah of Dadaeats, your Sunday and St. Patricks Day will be one for the books.<p>
 
