--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -30,7 +30,7 @@
 			</section>
 
 			<section>
-				<img src="#">
+				<img id="featured" src="images/antique.jpg" alt="Read featured posts" title="Featured posts">
 				<h3>Featured</h3>
 				<a href="#">Learn More</a>
 			</section>
@@ -40,17 +40,18 @@
 				<a href="#">Learn More</a>
 			</section>
 			<section>
-				<img src="#">
+				<img id="reviews" src="#" alt="" title="">
 				<h3>Reviews</h3>
 				<a href="#">Learn More</a>
 			</section>
 			<section>
-				<img src="#">
+				<img id="travel" src="#" alt="" title="">
 				<h3>Travel</h3>
 				<a href="#">Learn More</a>
 			</section>
 
 			<section>
+					<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
 					<h2>Fridays for Lent: Roasted Veggie Bowl</h2>
 					Recipe courtesy of the <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/roasted-veggie-buddha-bowl-5293785">Food Network</a>
 					<h5>Active:</h5> 
@@ -100,7 +101,7 @@
 			</section>
 
 			<section>
-				<img src="#">
+				<img src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
 				<h2>St. Patricks Day Vegan Pesto Pasta</h2>
 				<p><strong>St. Patricks Day & Sunday = Pasta</strong> <br>St. Patricks Day is a very normal day to see people with green socks and eating Lucky Charms. But, what if you want to put a green spin on your Sunday pasta meal? Well, the perfect place to start is by adding herbs, and for pasta having a go to pesto sauce is the answer to any time you are tired of the plain, boring red sauce. 
 
