add blog images

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -29,23 +29,22 @@
 				<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
 			</section>
 
-			<section>
-				<img id="featured" src="images/antique.jpg" alt="Read featured posts" title="Featured posts">
+			<section id="featured">
 				<h3>Featured</h3>
 				<a href="#">Learn More</a>
 			</section>
-			<section>
-				<img id="recipes" src="images/recipes.jpg" alt="Go to Recipes" title="Recipes">
+
+			<section id="recipes">
 				<h3>Recipes</h3>
 				<a href="#">Learn More</a>
 			</section>
-			<section>
-				<img id="reviews" src="#" alt="" title="">
+
+			<section id="reviews" >
 				<h3>Reviews</h3>
 				<a href="#">Learn More</a>
 			</section>
-			<section>
-				<img id="travel" src="#" alt="" title="">
+
+			<section id="travel">
 				<h3>Travel</h3>
 				<a href="#">Learn More</a>
 			</section>
