--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -100,7 +100,7 @@
 			</section>
 
 			<section>
-				<img src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
+				<img id="pesto" src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
 				<h2>St. Patricks Day Vegan Pesto Pasta</h2>
 				<p><strong>St. Patricks Day & Sunday = Pasta</strong> <br>St. Patricks Day is a very normal day to see people with green socks and eating Lucky Charms. But, what if you want to put a green spin on your Sunday pasta meal? Well, the perfect place to start is by adding herbs, and for pasta having a go to pesto sauce is the answer to any time you are tired of the plain, boring red sauce. 
 
