--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -29,22 +29,26 @@
 				<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
 			</section>
 
-			<section id="featured">
+			<section>
+				<image id="featured">
 				<h3>Featured</h3>
 				<a href="#">Learn More</a>
 			</section>
 
-			<section id="recipes">
+			<section> 
+				<image id="recipes">
 				<h3>Recipes</h3>
 				<a href="#">Learn More</a>
 			</section>
 
-			<section id="reviews" >
+			<section> 
+				<image id="reviews">
 				<h3>Reviews</h3>
 				<a href="#">Learn More</a>
 			</section>
 
-			<section id="travel">
+			<section>
+				<image id="travel">
 				<h3>Travel</h3>
 				<a href="#">Learn More</a>
 			</section>
