--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -146,13 +146,13 @@
 	
 			</section>
 
-			<section>
-				<img src="#">
+			<footer>
 				<h2>Join My Email Newsletter!</h2>
 				<p>Keep reviews of products, restaurants and travel tips close. Sign up to hear from me every month.</p>
 				<a href="malito:lbreid03@gmail.com">Sign Up!</a>
 				<p>Keep milking those Almonds- Lauren</p>
-			</section>
+				<p> <a href="#">Go to top</a>
+			</footer>
 
 		</main>
 
