--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -55,7 +55,7 @@
 
 			<section>
 					<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
-					<h2>Fridays for Lent: Roasted Veggie Bowl</h2>
+					<h3>Fridays for Lent: Roasted Veggie Bowl</h3>
 					Recipe courtesy of the <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/roasted-veggie-buddha-bowl-5293785">Food Network</a>
 					<h5>Active:</h5> 
 					30 min
@@ -105,7 +105,7 @@
 
 			<section>
 				<img id="pesto" src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
-				<h2>St. Patricks Day Vegan Pesto Pasta</h2>
+				<h3>St. Patricks Day Vegan Pesto Pasta</h3>
 				<p><strong>St. Patricks Day & Sunday = Pasta</strong> <br>St. Patricks Day is a very normal day to see people with green socks and eating Lucky Charms. But, what if you want to put a green spin on your Sunday pasta meal? Well, the perfect place to start is by adding herbs, and for pasta having a go to pesto sauce is the answer to any time you are tired of the plain, boring red sauce. 
 
 				<p>Normally, pesto contains dairy ingredients, but with this amazing recipe courtesy of Samah of Dadaeats, your Sunday and St. Patricks Day will be one for the books.<p>
@@ -147,7 +147,7 @@
 			</section>
 
 			<footer>
-				<h2>Join My Email Newsletter!</h2>
+				<p>Join My Email Newsletter!</p>
 				<p>Keep reviews of products, restaurants and travel tips close. Sign up to hear from me every month.</p>
 				<a href="malito:lbreid03@gmail.com">Sign Up!</a>
 				<p>Keep milking those Almonds- Lauren</p>
