--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -114,9 +114,7 @@
 				<p>Courtesy of: <a href="https://dadaeats.com/classic-five-minute-spinach-pesto-pasta">Dadda eats</a></p>
 	
 
-				<p>Normally, pesto contains dairy ingredients, but with this amazing recipe courtesy of Samah of Dadaeats, your Sunday and St. Patricks Day will be one for the books.<p>
-
-				<p>View the Recipe below</p>
+				<p>Normally, pesto contains dairy ingredients, but with this amazing recipe courtesy of Samah of Dadaeats, your Sunday and St. Patricks Day will be one for the books.</p>
  
 				<aside>
 					<h5> Prep Time</h5>
@@ -128,7 +126,7 @@
 					<h5>Author</h5>
 					Samah Dada
 				</aside>
-				
+
 				<h4>Ingredients</h4>
 				<ul>
 					<li>1 box pasta of choice</li>
