--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -29,8 +29,7 @@
 				<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
 			</section>
 
-			<section>
-				<image id="featured">
+			<section id="featured">
 				<h3>Featured</h3>
 				<a href="#">Learn More</a>
 			</section>
