--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -34,20 +34,17 @@
 				<a href="#">Learn More</a>
 			</section>
 
-			<section> 
-				<image id="recipes">
+			<section id="recipes">
 				<h3>Recipes</h3>
 				<a href="#">Learn More</a>
 			</section>
 
-			<section> 
-				<image id="reviews">
+			<section id="reviews">
 				<h3>Reviews</h3>
 				<a href="#">Learn More</a>
 			</section>
 
-			<section>
-				<image id="travel">
+			<section id="travel">
 				<h3>Travel</h3>
 				<a href="#">Learn More</a>
 			</section>
