--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -51,7 +51,7 @@
 
 			<section>
 					<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
-					<h3>Fridays for Lent: Roasted Veggie Bowl</h3>
+					<h3 class="blogs">Fridays for Lent: Roasted Veggie Bowl</h3>
 					Recipe courtesy of the <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/roasted-veggie-buddha-bowl-5293785">Food Network</a>
 				<aside>
 					<h5>Active:</h5> 
@@ -104,7 +104,7 @@
 
 			<section>
 				<img id="pesto" src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
-				<h3>St. Patricks Day Vegan Pesto Pasta</h3>
+				<h3 class="blogs">St. Patricks Day Vegan Pesto Pasta</h3>
 				<p><strong>St. Patricks Day & Sunday = Pasta</strong> <br>St. Patricks Day is a very normal day to see people with green socks and eating Lucky Charms. But, what if you want to put a green spin on your Sunday pasta meal? Well, the perfect place to start is by adding herbs, and for pasta having a go to pesto sauce is the answer to any time you are tired of the plain, boring red sauce. </p>
 
 				<p>Courtesy of: <a href="https://dadaeats.com/classic-five-minute-spinach-pesto-pasta">Dadda eats</a></p>
