--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -105,7 +105,7 @@
 			<section>
 				<img id="pesto" src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
 				<h3 class="blogs">St. Patricks Day Vegan Pesto Pasta</h3>
-				<p><strong>St. Patricks Day & Sunday = Pasta</strong> <br>St. Patricks Day is a very normal day to see people with green socks and eating Lucky Charms. But, what if you want to put a green spin on your Sunday pasta meal? Well, the perfect place to start is by adding herbs, and for pasta having a go to pesto sauce is the answer to any time you are tired of the plain, boring red sauce. </p>
+				<p>St. Patricks Day & Sunday = Pasta<br>St. Patricks Day is a very normal day to see people with green socks and eating Lucky Charms. But, what if you want to put a green spin on your Sunday pasta meal? Well, the perfect place to start is by adding herbs, and for pasta having a go to pesto sauce is the answer to any time you are tired of the plain, boring red sauce. </p>
 
 				<p>Courtesy of: <a href="https://dadaeats.com/classic-five-minute-spinach-pesto-pasta">Dadda eats</a></p>
 	
