--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -52,7 +52,7 @@
 			<section>
 					<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
 					<h3 class="blogs">Fridays for Lent: Roasted Veggie Bowl</h3>
-					Recipe courtesy of the <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/roasted-veggie-buddha-bowl-5293785">Food Network</a>
+					<p>Recipe courtesy of the <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/roasted-veggie-buddha-bowl-5293785">Food Network</a></p>
 				<aside>
 					<h5>Active:</h5> 
 					30 min
