--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -29,25 +29,25 @@
 				<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
 			</section>
 
-			<article id="featured">
+			<section id="featured">
 				<h3>Featured</h3>
 				<a href="#">Learn More</a>
-			</article>
+			</section>
 
-			<article id="recipes">
+			<section id="recipes">
 				<h3>Recipes</h3>
 				<a href="#">Learn More</a>
-			</article>
+			</section>
 
-			<article id="reviews">
+			<section id="reviews">
 				<h3>Reviews</h3>
 				<a href="#">Learn More</a>
-			</article>
+			</section>
 
-			<article id="travel">
+			<section id="travel">
 				<h3>Travel</h3>
 				<a href="#">Learn More</a>
-			</article>
+			</section>
 
 			<section>
 					<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
