--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body>
-		<div>
+<body> 
+		<div class="wrapper">
 			<h1>Dairy Free Girl in DC</h1>
 			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
 			<a href="#">Learn More</a>
@@ -29,31 +29,38 @@
 				<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
 			</section>
 
-			<section id="featured">
+			<article id="featured">
 				<h3>Featured</h3>
 				<a href="#">Learn More</a>
-			</section>
+			</article>
 
-			<section id="recipes">
+			<article id="recipes">
 				<h3>Recipes</h3>
 				<a href="#">Learn More</a>
-			</section>
+			</article>
 
-			<section id="reviews">
+			<article id="reviews">
 				<h3>Reviews</h3>
 				<a href="#">Learn More</a>
-			</section>
+			</article>
 
-			<section id="travel">
+			<article id="travel">
 				<h3>Travel</h3>
 				<a href="#">Learn More</a>
-			</section>
+			</article>
+
+			<aside>
+				<h3>Hey readers, just an intro from your author, Lauren.</h3>
+				<p>So, being dairy free is really hard. But, lukily I like to travel and try dairy free/vegan foods and tell you all all about them.</p>
+
+				<h3>Sign up for my Email List</h3>
+			</aside>
 
 			<section>
 					<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
 					<h3 class="blogs">Fridays for Lent: Roasted Veggie Bowl</h3>
 					<p>Recipe courtesy of the <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/roasted-veggie-buddha-bowl-5293785">Food Network</a></p>
-				<aside>
+				<aside class="blogs">
 					<h5>Active:</h5> 
 					30 min
 					<h5>Yield: </h5>
@@ -116,7 +123,7 @@
 
 				<p>Normally, pesto contains dairy ingredients, but this recipe courtesy of Samah of Dadaeats, it is Dairy Free!</p>
  
-				<aside>
+				<aside class="blogs">
 					<h5> Prep Time</h5>
 					5 minutes
 					<h5>Total Time</h5>
