--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body> 
-		<div class="wrapper">
+		<div id="wrapper">
 			<h1>Dairy Free Girl in DC</h1>
 			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
 			<a href="#">Learn More</a>
