--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -28,26 +28,27 @@
 			<h2>Welcome!</h2>
 			<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
 		</section>
-
-		<article id="featured">
+<section id="wrapper" class="clearfix">
+		<div id="featured">
 			<h3>Featured</h3>
 			<a href="#">Learn More</a>
-		</article>
+		</div>
 
-		<article id="recipes">
+		<div id="recipes">
 			<h3>Recipes</h3>
 			<a href="#">Learn More</a>
-		</article>
+		</div>
 
-		<article id="reviews">
+		<div id="reviews">
 			<h3>Reviews</h3>
 			<a href="#">Learn More</a>
-		 </article>
+		 </div>
 
-		<article id="travel">
+		<div id="travel">
 			<h3>Travel</h3>
 			<a href="#">Learn More</a>
-		</article>
+		</div>
+</section>
 
 		<aside>
 			<h3>Hey readers, just an intro from your author, Lauren.</h3>
