--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -24,10 +24,18 @@
 	</header>
 
 	<main>
-		<section>
+		<section id="welcome" class="clearfix">
+			<div>
 			<h2>Welcome!</h2>
-			<p>My name is Lauren and I live in a world with cheese, milk, butter and ice cream that is made dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
+			<p>This is a personal blog that showcases everything I really like to do. To try food and restaurants. To compile and alter recipes. And travel around the United States. When you live in a world with cheese, milk, butter and ice cream, it makes things very hard to be dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
+			</div>
+			<aside>
+			<h3>Author Biography:</h3>
+			<p>Hey guys, my name is Lauren and I am dairy free and I am not going to lie it is really hard. But, lukily I like to travel and try dairy free/vegan foods. I am super excited to share and show you all these amazing products.</p> <h3> <a href="#">Sign up for my Email List</a></h3>
+			</aside>
 		</section>
+
+
 <section id="wrapper" class="clearfix">
 		<div id="featured">
 			<h3>Featured</h3>
@@ -48,16 +56,11 @@
 			<h3>Travel</h3>
 			<a href="#">Learn More</a>
 		</div>
+
 </section>
 
-		<aside>
-			<h3>Hey readers, just an intro from your author, Lauren.</h3>
-			<p>So, being dairy free is really hard. But, lukily I like to travel and try dairy free/vegan foods and tell you all all about them.</p>
-
-			<h3>Sign up for my Email List</h3>
-		</aside>
-
 		<section>
+			<article>
 			<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
 			<h3 class="blogs">Fridays for Lent: Roasted Veggie Bowl</h3>
 			<p>Recipe courtesy of the <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/roasted-veggie-buddha-bowl-5293785">Food Network</a></p>
@@ -111,9 +114,9 @@
 
 					<li>Divide the quinoa between two bowls. Arrange half the vegetables and avocado slices on top of the quinoa, leaving a space for the yogurt in the middle. Dollop the yogurt in the empty space and serve with the lemon wedges.</li>
 				</ol>
-		</section>
+		</article>
 
-		<section>
+		<article>
 			<img id="pesto" src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
 			<h3 class="blogs">St. Patricks Day Vegan Pesto Pasta</h3>
 			<p>St. Patricks Day has come and gone but this years St. Patrick's Day was celebrated on a Sunday. Normally, for many families including mine, Sundays mean Pasta! St. Patricks Day normally shows people sporting green socks and eating Lucky Charms. But, there is more than just Corned Beef and Cabbage that you can have on this most famous of Catholic feast days. <br> So how about putting a green spin on your Sunday pasta meal? How should we do that? Well, the perfect place to start is by adding herbs and creating a pesto sauce.</p>
@@ -155,7 +158,7 @@
 					<li>Mix thoroughly.</li> 
 					<li>Optional: Blanch grape tomatoes in chili infused olive oil to add some color and sweetness to the dish. And maybe some almond milk ricotta if you're into that, or even some pine nuts. This is great served hot or as a cold pasta salad! </li>
 				</ol>
-				
+				</article>
 				
 			</section>
 
