--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -58,7 +58,7 @@
 		</div>
 
 </section>
-
+<div class="space"></div>
 		<section>
 			<article>
 			<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
