--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -9,7 +9,6 @@
 		<div id="header">
 			<h1>Dairy Free Girl in DC</h1>
 			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
-			<a href="#">Learn More</a>
         </div>
 
 	<header>	
@@ -25,11 +24,11 @@
 
 	<main>
 		<section id="welcome" class="clearfix">
-			<div id="left">
+			<div id="left" class="clearfix">
 			<h2>Welcome!</h2>
 			<p>This is a personal blog that showcases everything I really like to do. To try food and restaurants. To compile and alter recipes. And travel around the United States. When you live in a world with cheese, milk, butter and ice cream, it makes things very hard to be dairy free. Follow my stories, adventures, tips for eating out and more fun!</p>
 			</div>
-			<aside id="right">
+			<aside id="right" class="clearfix">
 			<h3>Author Biography:</h3>
 			<p>Hey guys, my name is Lauren and I am dairy free and I am not going to lie it is really hard. But, lukily I like to travel and try dairy free/vegan foods. I am super excited to share and show you all these amazing products.</p> <h3> <a href="#">Sign up for my Email List</a></h3>
 			</aside>
