--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -38,13 +38,13 @@
 <section id="wrapper" class="clearfix">
 		<div id="featured">
 			<h3>Featured</h3>
-			<p id="block">Look out for featured articles, reviews and recipes every month</p>
+			<p id="block">Look out for featured articles, reviews and recipes every month
 			<a href="#">Learn More</a>
 		</div>
 
 		<div id="recipes">
 			<h3>Recipes</h3>
-			<p id="block">New to being dairy free or just tired of the same old stuff? I have a collaboration of recipes from many bloggers and cooks and some of my own. Get cooking!</p>
+			<p id="block">New to being dairy free or just tired of the same old stuff? I have a collaboration of recipes from many bloggers and cooks and some of my own. Get cooking!
 			<a href="#">Learn More</a>
 		</div>
 
@@ -56,7 +56,7 @@
 
 		<div id="travel">
 			<h3>Travel</h3>
-			<p id="block">Read some tips I use when traveling and see some of my reviews of restaurants I have visited while journeying the country.</p>
+			<p id="block">Read some tips I use when traveling and see some of my reviews of restaurants I have visited while journeying the country.
 			<a href="#">Learn More</a>
 		</div>
 
