--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -38,26 +38,26 @@
 <section id="wrapper" class="clearfix">
 		<div id="featured">
 			<h3>Featured</h3>
-			<p id="block">Look out for featured articles, reviews and recipes every month
-			<a href="#">Learn More</a>
+			<p id="block">Look out for featured articles, reviews and recipes every month.
+			<a href="#">Learn More</a></p>
 		</div>
 
 		<div id="recipes">
 			<h3>Recipes</h3>
 			<p id="block">New to being dairy free or just tired of the same old stuff? I have a collaboration of recipes from many bloggers and cooks and some of my own. Get cooking!
-			<a href="#">Learn More</a>
+			<a href="#">Learn More</a></p>
 		</div>
 
 		<div id="reviews">
 			<h3>Reviews</h3>
 			<p id="block">Grocery shopping can be hard when you dont know what to look for OR if you are picky. See product reviews here.
-			<a href="#">Learn More</a>
+			<a href="#">Learn More</a></p>
 		 </div>
 
 		<div id="travel">
 			<h3>Travel</h3>
 			<p id="block">Read some tips I use when traveling and see some of my reviews of restaurants I have visited while journeying the country.
-			<a href="#">Learn More</a>
+			<a href="#">Learn More</a></p>
 		</div>
 
 </section>
