--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -66,6 +66,7 @@
 </div>
 		<section>
 			<article>
+			<h2>Featured</h2>	
 			<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
 			<h3 class="blogs">Fridays for Lent: Roasted Veggie Bowl</h3>
 			<p>Recipe courtesy of the <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/roasted-veggie-buddha-bowl-5293785">Food Network</a></p>
