--- a/unit_7/index.html
+++ b/unit_7/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body> 
+	<div id="all">
 		<div id="header">
 			<h1>Dairy Free Girl in DC</h1>
 			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
@@ -173,10 +174,10 @@
 				<p>Keep reviews of products, restaurants and travel tips close. Sign up to hear from me every month.</p>
 				<a href="malito:lbreid03@gmail.com">Sign Up!</a>
 				<p>Keep milking those Almonds- Lauren</p>
-				<p> <a href="#">Go to top</a>
+				<p> <a href="#">Go to top</a></p>
 			</footer>
 
-		</main>
-
+			</main>
+		</div>
 	</body>
 </html>
