--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -66,7 +66,7 @@
 	<p></p>
 </div>
 		<section>
-			<article>
+			<article class="blogi" >
 			<h2>Featured</h2>	
 			<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/7/25/0/FNK_Roasted-Veggie-Buddha-Bowl-H_s4x3.jpg.rend.hgtvcom.826.620.suffix/1532527786329.jpeg">
 			<h3 class="blogs">Fridays for Lent: Roasted Veggie Bowl</h3>
@@ -123,7 +123,7 @@
 				</ol>
 		</article>
 
-		<article>
+		<article class="blogi" >
 			<img id="pesto" src="images/veganpestopasta.jpg" alt="Vegan Pesto Pasta" title="St. Patricks Day Vegan Pesto Pasta">
 			<h3 class="blogs">St. Patricks Day Vegan Pesto Pasta</h3>
 			<p>St. Patricks Day has come and gone but this years St. Patrick's Day was celebrated on a Sunday. Normally, for many families including mine, Sundays mean Pasta! St. Patricks Day normally shows people sporting green socks and eating Lucky Charms. But, there is more than just Corned Beef and Cabbage that you can have on this most famous of Catholic feast days. <br> So how about putting a green spin on your Sunday pasta meal? How should we do that? Well, the perfect place to start is by adding herbs and creating a pesto sauce.</p>
