--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -14,8 +14,9 @@
 			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
         </div>
 
-	<header>
-		<nav input type="checkbox">
+	<header id="hamburger">
+		<input type="checkbox">
+		<nav>
 			<a href="#">Home</a>
 			<a href="#">Featured</a>
 			<a href="#">Recipes</a>
