--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -17,7 +17,7 @@
 	<header id="hamburger">
 		<input type="checkbox">
 		<nav>
-			<a href="#">Home</a>
+			<span><a href="#">Home</a></span>
 			<a href="#">Featured</a>
 			<a href="#">Recipes</a>
 			<a href="#">Reviews</a>
