--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -14,15 +14,21 @@
 			<p id="slogan">Dairy Free Living for the Everyday DC Girl</p>
         </div>
 
-	<header id="hamburger">
+	<header>
 		<input type="checkbox">
+		<div id="hamburger">
+			<span></span>
+			<span></span>
+			<span></span>
+			</div>
 		<nav>
-			<span><a href="#">Home</a></span>
+			<a href="#">Home</a>
 			<a href="#">Featured</a>
 			<a href="#">Recipes</a>
 			<a href="#">Reviews</a>
 			<a href="#">Travel</a>
 			<a href="#">Follow</a>
+
 		</nav>
 	</header>
 
